article/templates/nginx-depl.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-articles
  namespace: hometask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article
  template:
    metadata:
      labels:
        app: article
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: volume-nginx
        - name: get-article
          image: aceberg/get-article
          volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: volume-nginx
      volumes:
      - name: volume-nginx
        emptyDir: {}
