article/templates/service-mysql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: hometask
  labels:
    app: article
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: article
