article/templates/service-nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-articles
  namespace: hometask
  labels:
    app: article
spec:
  ports:
  - port: 80
    name: nginx
  clusterIP: None
  selector:
    app: article
